166214113-story(users): pagination for book - create new endpoints to fetchBooks  for all users - add faker library to the seeders book file - write unit test to test all routers  [Started  #166214113]
